--- a/test.html
+++ b/test.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <script src="http://localhost:9000/dist/plot.bundle.js"></script>
-    <link rel="stylesheet" href="css/nv.d3.css" type="text/css">
+    <link href="node_modules/metrics-graphics/dist/metricsgraphics.css">
     <style>
-        text {
-            font: 12px sans-serif;
-        }
-        svg {
-            display: block;
-        }
-        html, body, #chart, svg {
+        html, body{
             margin: 0px;
             padding: 0px;
             height: 100%;
@@ -22,8 +16,7 @@
 </head>
 </head>
 <body>
-<div id="chart" class='with-3d-shadow with-transitions'>
-    <svg></svg>
+<div id="chart">
 </div>
 </body>
 </html>
