--- a/test.html
+++ b/test.html
@@ -3,20 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script src="http://localhost:9000/dist/plot.bundle.js"></script>
-    <link href="node_modules/metrics-graphics/dist/metricsgraphics.css">
-    <style>
-        html, body{
-            margin: 0px;
-            padding: 0px;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
-</head>
+    <link href="static/vis.css" rel="stylesheet" />
+    <!--<script src="node_modules/vis/dist/vis.js"></script>-->
+    <!--<script src="node_modules/jquery/dist/jquery.js"></script>-->
+    <!--<script type="text/javascript">-->
+        <!--console.log('we are in the body script')-->
+        <!--function it () {-->
+            <!--console.log('on load')-->
+            <!--var container = document.getElementById('chart');-->
+            <!--console.log(container)-->
+            <!--// Create a DataSet (allows two way data-binding)-->
+
+            <!--// Create a DataSet (allows two way data-binding)-->
+            <!--var items = new vis.DataSet([-->
+                <!--{id: 1, content: 'item 1', start: '2014-04-20'},-->
+                <!--{id: 2, content: 'item 2', start: '2014-04-14'},-->
+                <!--{id: 3, content: 'item 3', start: '2014-04-18'},-->
+                <!--{id: 4, content: 'item 4', start: '2014-04-16', end: '2014-04-19'},-->
+                <!--{id: 5, content: 'item 5', start: '2014-04-25'},-->
+                <!--{id: 6, content: 'item 6', start: '2014-04-27', type: 'point'}-->
+            <!--]);-->
+
+            <!--// Configuration for the Timeline-->
+            <!--var options = {};-->
+
+            <!--// Create a Timeline-->
+            <!--var timeline = new vis.Timeline(container, items, options);-->
+            <!--console.log('onload end')-->
+        <!--}-->
+        <!--//  document.onload-->
+    <!--</script>-->
 </head>
 <body>
+
 <div id="chart">
 </div>
+<script src="http://localhost:9000/dist/plot.bundle.js"></script>
 </body>
 </html>
